@@ -2,3 +2,4 @@ DIST thinking-sphinx-2.0.14.gem 157184 SHA256 0109c4e081e5cde60c148875585358d21c
 DIST thinking-sphinx-3.0.6.gem 94720 SHA256 1b3ebead66c711802c91c8c70195207ae13e896344e3ae1c850f4df37c846224 SHA512 914b7cd3d4a4c962a60a4b53985cffc082779f85aa9784131b31a65b01f3e92ab961ad435f8eb059820c66363ef1af436782c1a4fdf09a9f8411154daf634f66 WHIRLPOOL e81773d033512b25ad301bbff9ed79460e1c2a9546a9a072c8344ed7cf3f767afaf2ab6d5ef22478444055f5568b1e2ad698950840e3b4da46a55c5b065c6dae
 DIST thinking-sphinx-3.1.0.gem 97280 SHA256 929d9f126a5e02ce41ee470fc9d265c50b542555ec9813173fc8f430f89e9edf SHA512 1e7f9acc23fec6e46aad5dff84fccc3bc3caa53078c4a1b424d5c9ecc5f8c31d8b1c71e5722c31e480b3a29357187c91befcb59d43fbf5683f0bfa30e6ff2c11 WHIRLPOOL 0676002f0d2b96d083142c8065b58101978952f6d6d190cc267efafdabea7ae395d392bfffcc3200307adf34bcd2149c9246a32ad9725b9b06b754d10ef79ea9
 DIST thinking-sphinx-3.1.1.gem 95232 SHA256 d8cc7bac782078158b6944bd2ad9a27b3354090ad68e2c470591a2cda7bc61bc SHA512 da8ec735f1f5252001dd3c74b6bbb15525a4696ac53d0ececaaa6607bafb29f6b676698216d399ffbb4c04fa881a10831d1b455363dbc9964d8c5a9808ff0067 WHIRLPOOL 1a0b52045b6cdb198fe6fc3f6b9ee881496f90af4ce7e94a5ed36d12b9cd83c791980514a739d38143f162673105b5702d6a70f6dc1ef69dece99739240dcdba
+DIST thinking-sphinx-3.1.3.gem 99840 SHA256 45865a7965da4276aef614326111b5eb11cb59f59d6d0d0d6c5da732d8c177f1 SHA512 3d8b0c4e6a8a224f9841ad84fb34738e879acedfec96692c4d00bb0dc0e0f57e7fd5122d533df81d7795dd432fcf363304109d2d2ee54189c24017b3789a3071 WHIRLPOOL edcf71b19d3248bb0a1cb01fae601248c72a74bdd7dc8fd4273131549da014a08aed143a12c76a20a6b158e1d1c61e611efb063c2bfb3f4ece058d712ed6d747
