@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/thinking-sphinx
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*thinking-sphinx-3.1.3 (22 May 2015)
+
+  22 May 2015; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-3.1.3.ebuild:
+  Version bump.
 
   02 Jul 2014; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-3.1.1.ebuild:
   Add ruby20.
